# MegamanClone

./: CMakeLists.txt  Makefile  boss.cpp  boss.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game  ip.txt  main.cpp  makefile  obstacle.cpp  obstacle.h  player.cpp  player.h  raylib.h  readme  readme.md
Include/: boss.h  enemy.h
src/: bullet.cpp  enemy.cpp  main.cpp  player.cpp
src/boss/: boss.cpp  boss.h
src/enemy/: enemy.cpp  enemy.h
src/main/: main.cpp
src/obstacle/: obstacle.cpp  obstacle.h
src/player/: player.cpp  player.h
src/sound/: soundManager.cpp  soundManager.h
